<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/latest_reading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/start_mapping_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_mapping_session"
        app:layout_constraintTop_toBottomOf="@id/latest_reading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/start_mapping_session"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_daily_summaries"
            android:contentDescription="@string/show_daily_summaries"
            app:icon="@drawable/outline_calendar_month_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_marginHorizontal="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_sessions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:contentDescription="@string/show_sessions"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:icon="@drawable/baseline_explore_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/export_previous_readings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/purple_500"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actions">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/export_previous_readings_title"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/export_previous_readings_from_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/outline_calendar_month_24"
                android:drawablePadding="10dp"
                android:text="@string/date_from" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/export_previous_readings_to_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/outline_calendar_month_24"
                android:drawablePadding="10dp"
                android:text="@string/date_to" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/export_previous_readings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/copy_previous_readings_to_clipboard"
                android:drawableStart="@drawable/baseline_save_24"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/copy_previous_readings_btn"
                android:contentDescription="@string/export_previous_readings"
                android:drawableStart="@drawable/baseline_copy_all_24"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/include_headers_in_csv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/include_csv_header_row_label"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sessions_scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/export_previous_readings">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TableLayout
                    android:id="@+id/previous_readings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TableLayout
                    android:id="@+id/sessions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TableLayout
                        android:id="@+id/session"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>